Prevent logo overlap on mobile devices

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -9,5 +9,4 @@ $font-size-h4:            ceil(($font-size-base * 1.1));
 $font-size-h5:            $font-size-base;
 $font-size-h6:            ceil(($font-size-base * 0.85));
 
-$color-background: whitesmoke;
-$btn-default-bg: $color-background;
+$btn-default-bg: whitesmoke;
